// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaselinesFilterChips should render chip correctly 1`] = `
<ChipGroup
  className=""
  collapsedText="\${remaining} more"
  defaultIsOpen={false}
  expandedText="Show Less"
  numChips={3}
  withToolbar={true}
>
  <ChipGroupToolbarItem
    categoryName="Baseline name"
    key="Baseline name"
  >
    <Component
      key="something"
    >
      something
    </Component>
  </ChipGroupToolbarItem>
</ChipGroup>
`;

exports[`BaselinesFilterChips should render chip update correctly 1`] = `
<ChipGroup
  className=""
  collapsedText="\${remaining} more"
  defaultIsOpen={false}
  expandedText="Show Less"
  numChips={3}
  withToolbar={true}
>
  <ChipGroupToolbarItem
    categoryName="Baseline name"
    key="Baseline name"
  >
    <Component
      key="something else"
    >
      something else
    </Component>
  </ChipGroupToolbarItem>
</ChipGroup>
`;

exports[`BaselinesFilterChips should render mount correctly 1`] = `
<BaselinesFilterChips>
  <ChipGroup
    className=""
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    numChips={3}
    withToolbar={true}
  >
    <InnerChipGroup
      className=""
      collapsedText="\${remaining} more"
      defaultIsOpen={false}
      expandedText="Show Less"
      isOpen={false}
      numChips={3}
      onToggleCollapse={[Function]}
      withToolbar={true}
    >
      <ChipGroupToolbarItem
        categoryName="Baseline name"
        key=".$Baseline name"
      >
        <GenerateId
          prefix="pf-random-id-"
        >
          <ul
            className="pf-c-chip-group pf-m-toolbar"
          >
            <li>
              <h4
                className="pf-c-chip-group__label"
                id="pf-random-id-0"
              >
                Baseline name
              </h4>
              <ul
                className="pf-c-chip-group"
              >
                <Component
                  component="li"
                  key=".0"
                >
                  <ComponentWithOuia
                    component={[Function]}
                    componentProps={
                      Object {
                        "children": undefined,
                        "component": "li",
                        "onClick": undefined,
                      }
                    }
                    consumerContext={null}
                  >
                    <Chip
                      className=""
                      closeBtnAriaLabel="close"
                      component="li"
                      isOverflowChip={false}
                      isReadOnly={false}
                      onClick={[Function]}
                      ouiaContext={
                        Object {
                          "isOuia": false,
                          "ouiaId": null,
                        }
                      }
                      tooltipPosition="top"
                    >
                      <GenerateId
                        prefix="pf-random-id-"
                      >
                        <li
                          className="pf-c-chip"
                        >
                          <span
                            className="pf-c-chip__text"
                            id="pf-random-id-1"
                          />
                          <ChipButton
                            aria-labelledby="remove_pf-random-id-1 pf-random-id-1"
                            ariaLabel="close"
                            id="remove_pf-random-id-1"
                            onClick={[Function]}
                          >
                            <Component
                              aria-label="close"
                              aria-labelledby="remove_pf-random-id-1 pf-random-id-1"
                              className=""
                              id="remove_pf-random-id-1"
                              onClick={[Function]}
                              variant="plain"
                            >
                              <ComponentWithOuia
                                component={[Function]}
                                componentProps={
                                  Object {
                                    "aria-label": "close",
                                    "aria-labelledby": "remove_pf-random-id-1 pf-random-id-1",
                                    "children": <TimesCircleIcon
                                      aria-hidden="true"
                                      color="currentColor"
                                      noVerticalAlign={false}
                                      size="sm"
                                      title={null}
                                    />,
                                    "className": "",
                                    "id": "remove_pf-random-id-1",
                                    "onClick": [Function],
                                    "variant": "plain",
                                  }
                                }
                                consumerContext={
                                  Object {
                                    "isOuia": false,
                                    "ouiaId": null,
                                  }
                                }
                              >
                                <Button
                                  aria-label="close"
                                  aria-labelledby="remove_pf-random-id-1 pf-random-id-1"
                                  className=""
                                  id="remove_pf-random-id-1"
                                  onClick={[Function]}
                                  ouiaContext={
                                    Object {
                                      "isOuia": false,
                                      "ouiaId": null,
                                    }
                                  }
                                  variant="plain"
                                >
                                  <button
                                    aria-disabled={null}
                                    aria-label="close"
                                    aria-labelledby="remove_pf-random-id-1 pf-random-id-1"
                                    className="pf-c-button pf-m-plain"
                                    disabled={false}
                                    id="remove_pf-random-id-1"
                                    onClick={[Function]}
                                    tabIndex={null}
                                    type="button"
                                  >
                                    <TimesCircleIcon
                                      aria-hidden="true"
                                      color="currentColor"
                                      noVerticalAlign={false}
                                      size="sm"
                                      title={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        aria-labelledby={null}
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        style={
                                          Object {
                                            "verticalAlign": "-0.125em",
                                          }
                                        }
                                        viewBox="0 0 512 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                                          transform=""
                                        />
                                      </svg>
                                    </TimesCircleIcon>
                                  </button>
                                </Button>
                              </ComponentWithOuia>
                            </Component>
                          </ChipButton>
                        </li>
                      </GenerateId>
                    </Chip>
                  </ComponentWithOuia>
                </Component>
              </ul>
            </li>
          </ul>
        </GenerateId>
      </ChipGroupToolbarItem>
    </InnerChipGroup>
  </ChipGroup>
</BaselinesFilterChips>
`;

exports[`BaselinesFilterChips should render shallow correctly 1`] = `
<ChipGroup
  className=""
  collapsedText="\${remaining} more"
  defaultIsOpen={false}
  expandedText="Show Less"
  numChips={3}
  withToolbar={true}
>
  <ChipGroupToolbarItem
    categoryName="Baseline name"
    key="Baseline name"
  >
    <Component />
  </ChipGroupToolbarItem>
</ChipGroup>
`;
